k8s/apps/flux-system/weave/app/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  hostnames:
    - gitops.jnobrega.com
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /
